# OpenBuffett

./: .gitignore  README.md  pyproject.toml  result.md
docs/: NVDA_Valuation_Report_20260704.md  template.md
i18n/: README_zh-hans.md
openspec/changes/add-fmp-us-research-client/: design.md  tasks.md
openspec/changes/fix-first-tool-call-timing-stuck/: design.md  proposal.md  tasks.md
openspec/changes/fix-tui-first-frame-repaint-consistency/: design.md
openspec/changes/fix-tui-horizontal-resize-and-lock-theme/: tasks.md
openspec/changes/fix-tui-queued-message-timeline-handoff/: design.md  proposal.md  tasks.md
openspec/changes/harden-fileglide-tool-contract/: design.md
openspec/changes/migrate-to-easyharness-runtime/: design.md
openspec/changes/minimize-easyharness-architecture/: design.md  proposal.md
src/: __init__.py  agent.py
src/app/: __init__.py  default_agent.py
src/base/: agent.py  llm.py  text2text.py
src/core/: __init__.py  agent.py  agent_loop.py  strands_runtime.py  text2text.py  timeline.py
src/ext/: __init__.py  fmp.py  seedream.py
src/service/: model_hub.py
src/tool/: __init__.py  basic_tools.py  contracts.py  fileglide_tools.py  fmp_tools.py  registry.py  seedream_image.py
src/tui/: __init__.py  app.py
src/util/: formatting.py  random.py  serialization.py  split.py  str.py  validate.py
test/: test_basic_tools.py  test_fmp_client.py  test_fmp_tools.py  test_model_config.py  test_model_hub.py  test_project_surface.py  test_strands_runtime.py  test_text2text_boundary.py  test_timeline.py  test_tooling.py  test_tui_app.py
(+71 files in other folders)
